@@ -1,3 +1,9 @@
+2013-01-27 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCpeeph.c,
+	  src/z80/gen.c:
+	  More efficient calls to _Noreturn functions.
+
 2013-01-27 Molnar Karoly <molnarkaroly AT users.sf.net>
 
 	* support/scripts/mcs51-disasm.pl: Prints the map of RAM, list of bits and
